make the text cleaner. givin a shine

--- a/milestone1/competition.html
+++ b/milestone1/competition.html
@@ -16,7 +16,7 @@
         </nav>
         <main>
             <h2>Competive Analysis</h2>
-            <p>My competators are GameSpot. is you search up "</p>
+            <p>My competators are GameSpot. is you search up "fun roblox games" you will find the site. One thing I thing GameSpot dose well is it makes the pictures nice and big. however the same cant be said for the text. the text is too small are is a little hard to see it.</p>
         </main>
         <footer>
             <h6>Copyright &copy; 2026</h6>
