--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -23,7 +23,7 @@
             <h4>Why should users care about the focus of the site?</h4>
             <p>beacuse they can discover fun games they have never played before</p>
             <h4>Why should a site be built for this?</h4>
-            <p>because it can</p>
+            <p>I know there are people who want to fing free fun games on roblox.</p>
             <h4>What would you like users to do at your site?</h4>
             <p>to discover hidden roblox gems</p>
             <h4>What is the goal of the site?</h4>
