changing the awnser

--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -21,13 +21,13 @@
             <h4>Where will you get all of the content for your site (ie. images & text)?</h4>
             <p>I will wirte my own text and get the game names from roblox, </p>
             <h4>Why should users care about the focus of the site?</h4>
-            <p>beacuse they can discover fun games they have never played before</p>
+            <p>Beacuse they can discover fun games they have never played before</p>
             <h4>Why should a site be built for this?</h4>
             <p>I know there are people who want to fing free fun games on roblox.</p>
             <h4>What would you like users to do at your site?</h4>
-            <p>to discover hidden roblox gems</p>
+            <p>To discover hidden roblox gems</p>
             <h4>What is the goal of the site?</h4>
-            <p>to give awerness of roblox games the user has probably never discoverd</p>
+            <p>To give awerness of roblox games the user has probably never discoverd</p>
         </main>
         <footer>
             <h6>Copyright &copy; 2026</h6>
