--- a/utahtech2/index.html
+++ b/utahtech2/index.html
@@ -4,7 +4,7 @@
 <title>Utah Tech University</title>
   <meta charset="utf-8">
   <meta name="robots" content="noindex, nofollow">
-  <link 
+  <link rel="stylesheet" href="Style.css">
 </head>
 <body>
   <header>
@@ -18,7 +18,7 @@
   </nav>
   <main>
     <h2>About Utah Tech</h2>
-    <p>A Utah Tech education means active learning within all academic disciplines. Hands-on learning, industry partnerships, and a dynamic student-life experience prepare students for successful careers and meaningful lives.</p>
+    <p>A <span id="ut">Utah Tech</span> education means active learning within all academic disciplines. Hands-on learning, industry partnerships, and a dynamic student-life experience prepare students for successful careers and meaningful lives.</p>
     <h2>Our Education</h2>
     <ul>
       <li>Acceptance Rate: 100%</li>
@@ -77,7 +77,7 @@
   </main>
   <footer>
       Copyright &copy; 2025 Utah Tech University<br>
-      <a href="mailto:firstname.lastname@utahtech.edu">firstname.lastname@utahtech.edu</a>
+      <a href="mailto:Ammon.Gustafson@utahtech.edu">firstname.lastname@utahtech.edu</a>
   </footer>
 </body>
 </html>
