--- a/utahtech3/students.html
+++ b/utahtech3/students.html
@@ -17,6 +17,8 @@
         <a href="faculty.html">Faculty</a> &nbsp;
         <a href="alumni.html">Alumni</a>
     </nav>
+    <div id="studenthero">
+    <img src="images/students.jpg" alt="students in a line" width="300">
     <main>
       <h2>Why Attend Utah Tech?</h2>
       <dl>
@@ -29,6 +31,7 @@
         <dt><b>Polytechnic</b></dt> <dd>All UT students gain real-world learning experiences through industry partnerships.</dd>
       </dl>
     </main>
+    </div>
     <footer>
         Copyright &copy; 2025 Utah Tech University<br>
         <a href="mailto:Ammon.Gustafson@utahtech.edu">Ammon.Gustafson@utahtech.edu</a>
